# gyre

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: personality.yaml
examples/: consultation_details.json  stakeholder_positions.json
templates/documents/: meeting_minutes.md  proposal.md
templates/meetings/: one_on_one.md
uemura_ai/: __init__.py  cli.py
uemura_ai/core/: __init__.py  agent.py  config.py  llm_interface.py
uemura_ai/modules/: __init__.py
uemura_ai/modules/assessments/: __init__.py  assessor.py
uemura_ai/modules/consultation/: __init__.py  consultant.py
uemura_ai/modules/documents/: __init__.py  generator.py
uemura_ai/modules/meetings/: __init__.py  facilitator.py
